2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * Makefile.am:
 * TextEditor.CompilerService.csproj: Updated.
